<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:icon="@drawable/round_search_24"
        android:title="@string/search"
        android:contentDescription="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter"
        android:icon="@drawable/round_filter_list_24"
        android:title="@string/filters"
        android:contentDescription="@string/filters"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/round_settings_24"
        android:title="@string/settings"
        android:contentDescription="@string/settings"
        app:showAsAction="ifRoom" />

</menu>