<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:id="@+id/txt_title"
        android:layout_marginTop="108dp"
        android:text="@string/settings"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="?textAppearanceDisplaySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/txt_sync_header"
        android:layout_marginTop="62dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?textAppearanceBodyLarge"
        android:textColor="?colorPrimary"
        android:text="Sync"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_sync_on_start"
        android:layout_marginTop="2dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/SettingsTitleTextAppearance"
        android:text="@string/sync_once_on_start"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/ui"
            android:textAppearance="?textAppearanceBodyLarge"
            android:textColor="?colorPrimary"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Images corner radius"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:textAppearance="@style/SettingsTitleTextAppearance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.8"
            android:text="Please restart the app for the changes to take effect."/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/cornerRadiusSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="50.0"
            android:valueTo="300.0"
            android:stepSize="50.0"
            app:trackHeight="24dp"
            android:layout_marginTop="10dp"
            />


    <TextView
        android:id="@+id/txt_database_header"
        android:layout_marginTop="32dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBodyLarge"
        android:textColor="?colorPrimary"
        android:text="@string/database"/>

    <LinearLayout
        android:id="@+id/article_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:foreground="@drawable/ripple_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title_article_limit"
            android:paddingBottom="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SettingsTitleTextAppearance"
            android:text="Local storage limit"/>

        <TextView
            android:id="@+id/txt_subtitle_article_limit"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="?textAppearanceTitleSmall"
            android:text="50 articles"
            android:alpha="0.8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/cleanup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:foreground="@drawable/ripple_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title_cleanup_time"
                android:paddingBottom="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/SettingsTitleTextAppearance"
                android:text="Storage cleanup"/>

            <TextView
                android:id="@+id/txt_subtitle_cleanup_time"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="?textAppearanceTitleSmall"
                android:text="Once a day"
                android:alpha="0.8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/outline_info_24"/>

    <TextView
        android:id="@+id/txt_db_cleanup_time"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        tools:text="Last Database cleanup at 2023-04-02 02:15"
        android:textAppearance="?textAppearanceLabelLarge"
        android:alpha="0.8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/warning_ic"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/round_warning_amber_24"/>

    <TextView
        android:id="@+id/warning_text"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textColor="?colorError"
        android:text="Database clean up service not registered ! \nTry reinstalling the app."
        android:textAppearance="?textAppearanceLabelLarge"
        android:alpha="0.8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>